# githubsecrets

./: .dockerignore  .drone.yml  .gitignore  .travis.yml  Dockerfile  Dockerfile.dev  LICENSE  MANIFEST.in  README.md  deploy.sh  entrypoint.sh  github-secrets.py  github_creds.json  main.py  pack.sh  requirements.txt  setup.cfg  setup.py  test_functionality.sh
.github/workflows/: docker-latest.yml  pythonpublish.yml  release.yml  testing.yml
githubsecrets/: __main__.py  cli.py  config.py  profile.py  secret.py
scripts/: config.py  githubsecrets.py  profile.py  secret.py  test_functionality.sh  version_validation.sh
src/githubsecrets/: __main__.py  ghs.py
